Moving properties to new package